<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <!-- Titre -->
        <TextView
            android:id="@+id/titre_home"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:text="@string/title_inscription"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textStyle="bold" />

        <!-- Champ Pseudo -->
        <EditText
            android:id="@+id/txtPseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo"
            android:inputType=""/>

        <!-- Champ MP -->
        <EditText
            android:id="@+id/txtMp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mp"
            android:inputType=""/>

        <!-- Radio Sex -->
        <RadioGroup
            android:id="@+id/sexRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/view_below">

            <TextView
                android:id="@+id/sexRadioGrp_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_insc"/>

            <RadioButton
                android:id="@+id/radio_masc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_masc_insc"/>

            <RadioButton
                android:id="@+id/radio_fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_fem_insc"/>
        </RadioGroup>

        <!-- Input Ville -->
        <Button
            android:id="@+id/btn_ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choix_ville"/>

        <TextView
            android:id="@+id/textViewVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choix_ville_none" />

        <!-- Bouton Confirmer -->
        <Button
            android:id="@+id/btnInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription" />

        <!-- Bouton retour -->
        <Button
            android:id="@+id/btn_inscription_retour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour"/>
    </LinearLayout>
</ScrollView>